# kitmatheinfo-bot

./: Cargo.toml  README.md  config.example.toml  deny.toml
.github/workflows/: build-docker.yml  build.yml  cargo-deny.yml
src/: config.rs  main.rs  moderation.rs  ophase.rs  self_management.rs  toc.rs
